[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/CustomLineEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://dialogic/custom-events/CharacterEnter/CharacterEnterPart.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/ResourcePickers/Files/FilePicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/GreyLabel.tscn" type="PackedScene" id=4]

[sub_resource type="Image" id=5]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 5 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 11.0
content_margin_right = 9.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CharacterEnterPart" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="BoolContainer" type="HBoxContainer" parent="."]
margin_right = 233.0
margin_bottom = 24.0

[node name="Label" parent="BoolContainer" instance=ExtResource( 4 )]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exit Instead"

[node name="ExitInstead" type="CheckBox" parent="BoolContainer"]
margin_left = 79.0
margin_right = 103.0
margin_bottom = 24.0

[node name="EnterContainer" type="VBoxContainer" parent="."]
margin_top = 28.0
margin_right = 233.0
margin_bottom = 108.0

[node name="Char" type="HBoxContainer" parent="EnterContainer"]
margin_right = 233.0
margin_bottom = 24.0

[node name="Label" parent="EnterContainer/Char" instance=ExtResource( 4 )]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Character"

[node name="FilePicker" parent="EnterContainer/Char" instance=ExtResource( 3 )]
margin_left = 64.0
margin_top = 0.0
margin_right = 233.0
margin_bottom = 24.0
Mode = "Scene"

[node name="FileButton" parent="EnterContainer/Char/FilePicker" index="1"]
custom_colors/font_color = Color( 0.8, 0.807843, 0.827451, 1 )

[node name="icon" parent="EnterContainer/Char/FilePicker/FileButton" index="0"]
texture = SubResource( 2 )

[node name="icon2" parent="EnterContainer/Char/FilePicker/FileButton" index="1"]
texture = SubResource( 2 )

[node name="ClearButton" parent="EnterContainer/Char/FilePicker" index="2"]
icon = SubResource( 2 )

[node name="Coords" type="HBoxContainer" parent="EnterContainer"]
margin_top = 28.0
margin_right = 233.0
margin_bottom = 52.0

[node name="Label" parent="EnterContainer/Coords" instance=ExtResource( 4 )]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X:"

[node name="X" type="SpinBox" parent="EnterContainer/Coords"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
max_value = 10000.0

[node name="Label2" parent="EnterContainer/Coords" instance=ExtResource( 4 )]
margin_left = 94.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Y:"

[node name="Y" type="SpinBox" parent="EnterContainer/Coords"]
margin_left = 109.0
margin_right = 183.0
margin_bottom = 24.0
max_value = 10000.0

[node name="BoolContainer" type="HBoxContainer" parent="EnterContainer"]
margin_top = 56.0
margin_right = 233.0
margin_bottom = 80.0

[node name="Label" parent="EnterContainer/BoolContainer" instance=ExtResource( 4 )]
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FaceLeft"

[node name="FaceLeft" type="CheckBox" parent="EnterContainer/BoolContainer"]
margin_left = 57.0
margin_right = 81.0
margin_bottom = 24.0

[node name="ExitContainer" type="HBoxContainer" parent="."]
visible = false
margin_top = 112.0
margin_right = 289.0
margin_bottom = 139.0

[node name="Label" parent="ExitContainer" instance=ExtResource( 4 )]
margin_top = 6.0
margin_right = 155.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Character Name to find: "

[node name="NameInput" parent="ExitContainer" instance=ExtResource( 1 )]
margin_left = 159.0
margin_right = 289.0
margin_bottom = 27.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[editable path="EnterContainer/Char/FilePicker"]
